--- a/Batallion/package.json
+++ b/Batallion/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular2-fontawesome": "^5.2.1",
     "bootstrap": "^4.3.1",
     "bootstrap3": "^3.3.5",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
